Được tạo bằng Colaboratory

--- a/Face_Recognition.ipynb
+++ b/Face_Recognition.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1SBXAb3ClmkzhVdUBzj1IIhMHRoKs7pXu",
-      "authorship_tag": "ABX9TyNAulCWV/Sb16UylgLfr66O",
+      "authorship_tag": "ABX9TyNAdRee8fFVMq7FMd5i/4gV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lDbEKCfji8u-"
       },
@@ -79,7 +79,7 @@
         },
         "outputId": "2c987260-9f4f-48ec-ebb9-91343ce45218"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -122,7 +122,7 @@
         },
         "outputId": "c1753545-4dc2-45a1-c2a9-dca5c21c1167"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "id": "BsgqitnI9eB4",
         "outputId": "1a12a8d2-0649-470c-c049-4aa11e821ef3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "id": "ugOwpPGI9mME",
         "outputId": "d0e4cd6d-be83-48bf-8ec9-1a624d2bd1a4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +369,7 @@
         "id": "kfXoQ4Gq9p8g",
         "outputId": "00957208-3e0c-4dcd-9f7a-779806aaaaa5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -397,7 +397,7 @@
         "id": "vQJu1ZfG1iBH",
         "outputId": "e3325017-43e3-482b-db86-33b1e8c8157e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "id": "AnpQhiDQ-aWc",
         "outputId": "7be5c66e-bb2b-41ea-aafb-65f5d191f0f4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +552,7 @@
         "id": "ZgGRxqPw1oIr",
         "outputId": "c19691eb-3882-40ff-f6cb-c96d58167d5c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +633,7 @@
         "id": "VTWqlkbu_L_f",
         "outputId": "856cfce9-be9a-43c2-cf41-6d676278cf4c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +712,7 @@
         "id": "2jTDIwQM086U",
         "outputId": "91881687-147e-4af8-a482-d9767ea9dc79"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,6 +741,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save('face_rec_50epochs.h5')"
+      ],
+      "metadata": {
+        "id": "KerEu8nC2iXg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "LejU6-vK2u48"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
